fix about us paragraph spacing, add proper gallery overlay

--- a/CAOS2024/css/bodyandheadings.css
+++ b/CAOS2024/css/bodyandheadings.css
@@ -98,14 +98,14 @@ body {
 
 .bio-header {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .bio-subheader {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -10%);
 }
